--- a/tutum.yml
+++ b/tutum.yml
@@ -5,7 +5,7 @@ datadog:
   volumes:
     - "/var/run/docker.sock:/var/run/docker.sock"
     - "/proc/mounts:/host/proc/mounts:ro"
-    - "/sys/fs/cgroup/:/host/sys/fs/cgroup:ro"
+    - "/sys/fs/cgroup:/host/sys/fs/cgroup:ro"
   environment:
     - "HOSTNAME=$TUTUM_NODE_HOSTNAME"
     - "API_KEY=YOUR-API-KEY-HERE"
