--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ datadog:
   restart: "on-failure"
   volumes:
     - "/var/run/docker.sock:/var/run/docker.sock"
-    - "/proc/:/host/proc/:ro"
+    - "/proc:/host/proc:ro"
     - "/sys/fs/cgroup:/host/sys/fs/cgroup:ro"
   environment:
     - "API_KEY=YOUR-API-KEY-HERE"
