--- a/tutum.yml
+++ b/tutum.yml
@@ -4,7 +4,7 @@ datadog:
   privileged: true
   volumes:
     - "/var/run/docker.sock:/var/run/docker.sock"
-    - "/proc/mounts:/host/proc/mounts:ro"
+    - "/proc:/host/proc:ro"
     - "/sys/fs/cgroup:/host/sys/fs/cgroup:ro"
   environment:
     - "HOSTNAME=$TUTUM_NODE_HOSTNAME"
